# qwen3-tts-api

./: .editorconfig  .env.dist  .gitignore  Makefile  README.md  config.py  main.py  pyproject.toml  server.py  tts.py  utils.py
.github/workflows/: python-app.yml
public/: index.html
src/engine/: index.py  tts_engine.py
src/engine/qwen3/: tts_engine_06_base.py  tts_engine_17_base.py  tts_engine_17_voice_design.py
