[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen3-tts-api"
version = "1.0"
authors = [
  { name="Brioch", email="134280928+Brioch@users.noreply.github.com" },
]
description = "A simple web API for TTS"
readme = "README.md"
requires-python = "~=3.12.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "librosa",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "dotenv>=0.9.9",
    "pydub>=0.25.1",
    "soundfile>=0.13.1",
    "numpy<2",
    "qwen-tts==0.0.5",
    "transformers>=4.57.3",
]

[project.optional-dependencies]
cpu = [
    "torch",
    "torchaudio",
]
gpu = [
    "torch",
    "torchaudio",
    "flash-attn>=2.8.3",
]
rocm-gfx1151 = [
    "torch~=2.9.0",
    "torchaudio~=2.9.0",
    "pytorch-triton-rocm",
    "rocm",
    "rocm-sdk-core",
    "rocm-sdk-libraries-gfx1151",
]

[project.urls]
Homepage = "https://github.com/Brioch/any-tts-api"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]

[tool.uv]
no-build-isolation-package = ['flash-attn']
prerelease = "allow"
conflicts = [
    [
        { extra = "cpu" },
        { extra = "gpu" },
        { extra = "rocm-gfx1151" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "gpu" },
    { index = "pytorch-rocm-gfx1151", extra = "rocm-gfx1151" },
]
torchaudio = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "gpu" },
    { index = "pytorch-rocm-gfx1151", extra = "rocm-gfx1151" },
]
pytorch-triton-rocm = [
    { index = "pytorch-rocm-gfx1151", extra = "rocm-gfx1151" },
]
rocm = [
    { index = "pytorch-rocm-gfx1151", extra = "rocm-gfx1151" },
]
rocm-sdk-core = [
    { index = "pytorch-rocm-gfx1151", extra = "rocm-gfx1151" },
]
rocm-sdk-libraries-gfx1151 = [
    { index = "pytorch-rocm-gfx1151" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm-gfx1151"
url = "https://repo.amd.com/rocm/whl/gfx1151"
explicit = true
